# ppt-to-web

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN_NOTES.md  README.md  USER_GUIDE.md  create_hero_images.py  create_sample_images.py  create_sample_ppt.py  example.py  pyproject.toml  quick_start.py  sample_presentation.pptx  set_hero_image.py
src/ppt_to_web/: __init__.py  cli.py  ppt_to_yaml.py  yaml_to_html.py
src/ppt_to_web/converters/: __init__.py
src/ppt_to_web/templates/: cover_story.html  index.html  magazine.html  onepage.html
tests/: test_cli.py  test_ppt_to_yaml.py  test_yaml_to_html.py
