[project]
name = "ppt-to-web"
version = "0.1.1"
description = "Convert PowerPoint presentations to professional web pages with McKinsey/Bloomberg/Economist style"
readme = "README.md"
authors = [
    { name = "Henry Yao", email = "henryyao1126@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
    "wand>=0.6.13",
]

[project.scripts]
ppt-to-web = "ppt_to_web.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ppt_to_web"]
